# homework_20

./: Dockerfile  docker-compose.yml  pyproject.toml
mysite/: shopapp-fixtures.json
mysite/mysite/: settings.py
