[project]
name = "homework-20"
version = "0.1.0"
description = ""
authors = [
    {name = "anton",email = "raudin@mail.com"}
]

requires-python = ">=3.13"
dependencies = [
    "asgiref (>=3.10.0,<4.0.0)",
    "django (==4.2.0)",
    "django-debug-toolbar (==4.0.0)",
    "django-filter (==23.2)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "sqlparse (>=0.5.3,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
